# thot_stack

./: .gitignore  Dockerfile  README.md  dune-project  flake.nix  package-lock.json  package.json  tailwind.config.js  thot_stack.opam  vite.config.js
lib/: dune  types.ml
lib/layouts/: dune  main.ml  primary.ml  secondary.ml
lib/pages/: about.ml  dune  home.ml  todo.ml
lib/pages/about/: about.ml  dune
lib/pages/home/: components.ml  dune  home.ml
lib/pages/project/: dune  project.ml
lib/pages/todo/: components.ml  dune  todo.ml
web/: tailwind.config.js
web/css/: index.css
web/js/: home.js  index.js
web/js/plugins/webgl-background/: fragment.glsl  index.js  shader-worker.js  vertex.glsl
